feat: 验证码登录页面

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,13 @@ kotlin.code.style=official
 android.injected.testOnly=false
 #bytex.ASM_API=ASM9
 #开启并行编译，gradle默认是串行编译，开启并行编译可以提高编译速度
-#org.gradle.parallel=true
+org.gradle.parallel=true
 #开启守护进程，gradle可以更好的缓存构建信息，而且运行在后台，不用每次构建都去初始化然后再启动JVM了
-#org.gradle.daemon=true
+org.gradle.daemon=true
 #开启配置缓存,如果构建过程中没有修改配置文件，那么下次构建时会直接使用缓存的配置信息，而不用重新解析配置文件
-#org.gradle.configuration.cache=true
+org.gradle.configuration.cache=true
 #开启构建缓存，可以缓存编译过程中的一些中间文件，下次构建时可以直接使用缓存的中间文件，而不用重新编译
-#org.gradle.caching=true
+org.gradle.caching=true
 # configuration cache  可提升编译速度 但会对一些未适配的三方插件有影响
 #org.gradle.unsafe.configuration-cache=true
 #org.gradle.unsafe.configuration-cache-problems=warn
@@ -23,8 +23,8 @@ android.injected.testOnly=false
 #关闭R文件传递也可以减少很大一部分包体积与dex数量
 android.nonTransitiveRClass=true
 #开启跨模块增量编译
-#kotlin.incremental.useClasspathSnapshot=true
-#android.nonFinalResIds=false
+kotlin.incremental.useClasspathSnapshot=true
+android.nonFinalResIds=false
 # 可选，启用构建报告
 #kotlin.build.report.output=file
 #强制不增量
