--- a/login/src/main/AndroidManifest.xml
+++ b/login/src/main/AndroidManifest.xml
@@ -3,12 +3,12 @@
 
     <application>
         <activity
-            android:name=".ui.complete.LoginBySmsCodeActivity"
+            android:name=".ui.complete.LoginByOneKeyActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.complete.LoginByOneKeyActivity"
+            android:name=".ui.complete.LoginBySmsCodeActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
             android:exported="false"
             android:screenOrientation="portrait" />
@@ -45,7 +45,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/TransparentTheme" />
         <activity
-            android:name=".ui.popup.LoginByPwdActivityPopupActivity"
+            android:name=".ui.popup.LoginBySmsCodePopupActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/TransparentTheme" />
+        <activity
+            android:name=".ui.popup.LoginByPwdPopupActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale"
             android:exported="false"
             android:screenOrientation="portrait"
