--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,7 +23,7 @@ minSdk = "24"
 #*/
 targetSdk = "33"
 #AGP的版本
-agp = "8.7.1"
+agp = "8.7.2"
 material = "1.12.0"
 #AndroidX
 androidxAppcompat = "1.7.0"
@@ -32,10 +32,10 @@ androidxFragmentKtx = "1.8.4"
 androidxCollectionKtx = "1.4.4"
 androidxLifecycle = "2.8.6"
 androidxVectordrawable = "1.2.0"
-androidxConstraintlayout = "2.1.4"
-androidxAnnotation = "1.9.0"
+androidxConstraintlayout = "2.2.0"
+androidxAnnotation = "1.9.1"
 androidxMultidex = "2.0.1"
-androidxCore = "1.13.1"
+androidxCore = "1.15.0"
 androidxCoreSplashscreen = "1.0.1"
 androidxCoordinatorlayout = "1.2.0"
 androidxSwiperefreshlayout = "1.1.0"
@@ -58,7 +58,7 @@ kotlinxCoroutines = "1.8.1"
 kotlinxSerializationJson = "1.6.3"
 
 #三方库
-theRouter = "1.2.2"
+theRouter = "1.2.3-rc16"
 benManesVersion = "0.51.0"
 toaster = "12.6"
 vanniktechPublish = "0.29.0"
@@ -68,7 +68,7 @@ retrofitKotlinxSerializationJson = "1.0.0"
 lottie = "6.5.2"
 moshiKotlin = "1.15.1"
 xxPermissions = "20.0"
-mmkv = "1.3.9"
+mmkv = "2.0.0"
 progressManager = "1.5.0"
 appStartFaster = "2.3.0"
 bannerViewPager = "3.5.12"
@@ -226,7 +226,7 @@ materialDialog-bottomsheets = { group = "com.afollestad.material-dialogs", name 
 materialDialog-lifecycle = { group = "com.afollestad.material-dialogs", name = "lifecycle", version.ref = "materialDialog" }
 dateTimePicker = { group = "com.github.loperSeven", name = "DateTimePicker", version.ref = "dateTimePicker" }
 
-bugly-pro = { module = "com.tencent.bugly:bugly-pro", version.ref = "buglyPro" }
+#bugly-pro = { module = "com.tencent.bugly:bugly-pro", version.ref = "buglyPro" }
 #file-compressor = { group = "com.github.javakam", name = "file.compressor", version.ref = "fileCore" }
 #file-core = { group = "com.github.javakam", name = "file.core", version.ref = "fileCore" }
 #file-selector = { group = "com.github.javakam", name = "file.selector", version.ref = "fileCore" }
