update:新增player代码示例，图片预览支持多图

--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
                 android:resource="@xml/file_provider_path" />
         </provider>
         <activity
-            android:name=".ui.ImgPreviewActivity"
+            android:name=".ui.img_pre.ImgPreviewActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait" />
 
