--- a/aliemas/src/main/AndroidManifest.xml
+++ b/aliemas/src/main/AndroidManifest.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <application>
+        <activity
+            android:name=".crash.CrashActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+    </application>
 
 </manifest>
