--- a/img/src/main/AndroidManifest.xml
+++ b/img/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
-<manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <application>
+        <activity
+            android:name=".ImgPreviewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
+    </application>
 
 
 </manifest>
